--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,15 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   testImplementation('org.mockito:mockito-core')
+  compileOnly 'org.projectlombok:lombok'
+  annotationProcessor 'org.projectlombok:lombok'
+  runtimeOnly 'com.h2database:h2'
 }
 
 test {
